# dagsordener

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.chainlit  NOTES.md  PROJECT.md  chainlit_app.py  completions.py  docker-compose.yml  knowledge.yaml  package-lock.json  pyproject.toml  search.py
app/: main.py  parser.py
data/raw/test/: dagsbil.pdf:Zone.Identifier  document.pdf:Zone.Identifier
data/test/: example_minutes.html
etl/: qdrant_sync.py
etl/extract/: backfill.py  html_meeting.py  incremental.py  ingestion.py  listings.py  refresh.py
etl/ingestion/: meeting_ingest.py
etl/transform/: parse.py  parser.py
examples/: example_agenda.html  example_listings.html  example_scrolled.html
public/: custom.css
src/: agent.py  embedder.py  main.py  parser.py  qdrant.py  retriever.py  scraper.py  search.py  sync.py
