[project]
name = "dagsordener"
version = "0.2.0"
description = "Sync dagsordener.aarhus.dk referater to Qdrant"
requires-python = ">=3.10, <=3.12"
dependencies = [
  "playwright",
  "beautifulsoup4",
  "markdownify",
  "torch",
  "FlagEmbedding",
  "qdrant-client",
]

[project.scripts]
dagsordener = "src.main:main"

[tool.ruff]
line-length = 100
lint.select = ["E","F","I","UP"]
format.quote-style = "single"

[tool.uv]
index-strategy = "unsafe-best-match"