[project]
name = "dagsordener"
version = "0.2.0"
description = "Sync dagsordener.aarhus.dk referater to Qdrant"
requires-python = ">=3.12"
dependencies = [
  "playwright",
  "beautifulsoup4",
  "markdownify",
  "markdown-it-py",
  "qdrant-client",
  "smolagents",
  "openai",
  "litellm",
  "ddgs",
  "streamlit",
  "fastapi",
  "uvicorn",
  "chainlit"
]
